--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "n8n-nodes-<...>",
-  "version": "0.1.0",
+  "name": "n8n-nodes-geoip",
+  "version": "0.0.1",
   "description": "",
   "keywords": [
     "n8n-community-node-package"
@@ -13,41 +13,41 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/pemontto/n8n-nodes-geoip.git"
   },
   "main": "index.js",
   "scripts": {
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
-    "lint": "tslint -p tsconfig.json -c tslint.json && eslint nodes credentials package.json",
-    "lintfix": "tslint --fix -p tsconfig.json -c tslint.json && eslint nodes credentials package.json --fix",
-    "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "lint": "tslint -p tsconfig.json -c tslint.json && eslint nodes package.json",
+    "lintfix": "tslint --fix -p tsconfig.json -c tslint.json && eslint nodes package.json --fix",
+    "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes package.json",
+    "preload": "node -e \"import('geolite2-redist').then(geolite => geolite.downloadDbs())\""
   },
   "files": [
     "dist"
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
-    "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
-    ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/GeoIP/GeoIP.node.js"
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/request-promise-native": "~1.0.15",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint-plugin-n8n-nodes-base": "^1.5.4",
+    "@types/express": "^4.17.14",
+    "@types/request-promise-native": "~1.0.18",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint-plugin-n8n-nodes-base": "^1.10.0",
     "gulp": "^4.0.2",
-    "n8n-core": "^0.125.0",
-    "n8n-workflow": "^0.107.0",
+    "n8n-core": "^0.138.0",
+    "n8n-workflow": "^0.120.0",
     "prettier": "^2.7.1",
     "tslint": "^6.1.2",
-    "typescript": "~4.6.0"
+    "typescript": "~4.8.4"
+  },
+  "dependencies": {
+    "geolite2-redist": "^3.0.3",
+    "maxmind": "^4.3.8"
   }
 }
