Migrate to @n8n/node-cli tooling
- Update build system to use @n8n/node-cli
- Switch from npm to pnpm
- Add custom SVG icon
- Add usableAsTool for AI agent compatibility
- Update dependencies (geolite2-redist, maxmind)
- Preserve backwards compatible node name (geoIP)

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "n8nNodesApiVersion": 1,
     "strict": false,
     "nodes": [
-      "dist/nodes/GeoIp/GeoIp.node.js"
+      "dist/nodes/GeoIp/GeoIP.node.js"
     ]
   },
   "dependencies": {
